finalisasi landing page

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
     <table>
         <thead>
             <tr>
-                <th style="width: 10%;">Pertemuan</th>
+                <th style="width: 20%;">Pertemuan</th>
                 <th>praktikum</th>
                 <th>tugas</th>
                 <th style="width: 20%;">css</th>
                 <th style="width: 15%;">js</th>
+                <th style="width: 20;">php</th>
             </tr>
         </thead>
         <tbody>
@@ -70,17 +71,25 @@
                 <td>pertemuan 3</td>
                 <td><a href="praktikum/p3.html" target="_blank">p3</a></td>
                 <td><a href="tugas/tugas3.html" target="_blank">tugas3</a></td>
+                <td> - </td>
+                <td> - </td>
+                <td> - </td>
             </tr>
             <tr>
                 <td>pertemuan 4</td>
                 <td><a href="praktikum/p4.html" target="_blank">p4</a></td>
                 <td><a href="tugas/tugas4.html" target="_blank">tugas4</a></td>
+                <td> - </td>
+                <td> - </td>
+                <td> - </td>
             </tr>
             <tr>
                 <td>pertemuan 5</td>
                 <td><a href="praktikum/p5.html" target="_blank">p5</a></td>
                 <td><a href="tugas/tugas5.html" target="_blank">tugas5</a></td>
                 <td><a href="praktikum/css/style.css" target="_blank">p3 style</a> | <a href="tugas/css/style.css" target="_blank">tugas5 style</a></td>
+                <td> - </td>
+                <td> - </td>
             </tr>
             <tr>
                 <td>pertemuan 6</td>
@@ -88,6 +97,39 @@
                 <td><a href="tugas/tugas6.html" target="_blank">tugas6</a></td>
                 <td> - </td>
                 <td><a href="praktikum/js/scriptp6.js" target="_blank">p6 js</a> | <a href="tugas/js/script6.js" target="_blank">tugas6 js</a></td>
+                <td> - </td>
+            </tr>
+            <tr>
+                <td>pertemuan 9</td>
+                <td><a href="praktikum/p9/index.php" target="_blank">p9</a></td>
+                <td><a href="tugas/tugas/p9/index.php" target="_blank">tugas9</a></td>
+                <td> - </td>
+                <td> - </td>
+                <td> - </td>
+            </tr>
+            <tr>
+                <td>pertemuan 10</td>
+                <td><a href="praktikum/p10/index.php" target="_blank">p10</a></td>
+                <td><a href="tugas/p10/index.php" target="_blank">tugas10 1</a></td>
+                <td> - </td>
+                <td> - </td>
+                <td><a href="tugas/p10/index2.php" target="_blank">tugas10 2</a></td>
+            </tr>
+            <tr>
+                <td>pertemuan 11</td>
+                <td><a href="praktikum/p11/index.php" target="_blank">p11</a></td>
+                <td><a href="tugas/p11/index.php" target="_blank">tugas11</a></td>
+                <td> - </td>
+                <td> - </td>
+                <td> - </td>
+            </tr>
+            <tr>
+                <td>Pemrograman Web Contoh</td>
+                <td><a href="praktikum/pemrograman_web_contoh/login.php" target="_blank">index</a></td>
+                <td> - </td>
+                <td> - </td>
+                <td> - </td>
+                <td> - </td>
             </tr>
         </tbody>
     </table>
